version 2 update feature: dark mode, control speed, allow change rule , life pattern(still bugs to fix)

--- a/index.css
+++ b/index.css
@@ -19,18 +19,68 @@ header {
 }
 
 :root {
-  --primary-color: #6750a4;
+  --primary-color: #bbadde;
   --white-color: #fff;
-  --secondary-color: #eaddff;
+  --secondary-color: #554e61;
   --tertiary-color: #21005d;
   --dark-color: #1d192b;
 }
 
-.reset_btn {
+html.dark-theme {
+  --primary-color: #1d0d47;
+  --white-color: #07e207;
+  --secondary-color: #cdc6d8;
+  --tertiary-color: #07e207;
+  --dark-color: #6b6b6c;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --primary-color: #1d0d47;
+    --white-color: #07e207;
+    --secondary-color: #9658ee;
+    --tertiary-color: #07e207;
+    --dark-color: #6b6b6c;
+  }
+}
+body {
+  background: var(--primary-color);
+}
+
+header {
+  color: var(--tertiary-color);
+}
+
+.reset_btn,
+.start_stop_btn,
+.night_btn {
   color: var(--white-color);
   background-color: var(--primary-color);
   border: none;
   border-radius: 8px;
   font-size: 24px;
   padding: 6px 12px;
+}
+
+#myRange {
+  -webkit-appearance: none;
+  outline: none;
+  width: 160px;
+  height: 24px;
+  background: var(--white-color);
+  border-radius: 20px;
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+  margin-top: 1rem;
+}
+
+#myRange::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 24px;
+  height: 24px;
+
+  border-radius: 50%;
+  background-color: var(--primary-color);
+  box-shadow: -410px 0 0 400px var(--secondary-color);
+  cursor: pointer;
 }
